	  if lchown() isn't available and configure is not being run as root
	- more header file changes for AIX
	- added :shescape query format type for strings, which prints strings
	  which will survive a single level of shell expansion
	- fixed --setperms and --setugids to handle empty packages and 
	  packages with odd filenames
	- include <sys/time.h> before <sys/resource.h>
	- include "miscfn.h" first

2.3.11 -> 2.4:
	- changed RPMNLSDIR directories to and @datadir@ to better
	  conform with autoconf
	- set RPM_INSTALL_PREFIX environment variable when running 
	  verify scripts
	- beginnings of SCO support (though I suspect it will take one
	  or two more iterations to get it right)
	- switched to CVS and updated some Makefile rules
	- look for gethostbyname() instead of gethostname() in -nsl
	  (this could break some things)
	- added check for strcasecmp() in -lucb on systems which don't
	  have strcasecmp() in libc
	- don't build -static on hpux10
	- don't try and NLS empty strings
	- changed index() call to strchr() in macro code
	- include <time.h> in build/spec.c for various platforms
	- added update-po rule to po/Makefile.in
	- updated de.po (thanks to Karl Eichwalder)
	- rpmFindByFile() removes trailing and duplicate /'s
	- made many string in rpm program (though not yet in the various
	  libraries) translatable
	- eight character user names could break -qlv
	- requirements which begin with a leading / require files (in
	  the database!) instead of packages
	- clean up conflictsindex during --rebuilddb
	- get path to gzip from /usr/lib/rpmrc rather then just hoping it's 
	  in the path
	- use dbpath for error messages with include database path in 
	  their text
	- don't set owner/group if binaries installed by "make install"
	- include <strings.h> on SCO
	- don't use cpio when installing packages <gulp>
	- fixed bug which affected dependencies on the Alpha
	- made '=' work for long arguments (the switch to popt broke this)
	- handle solaris systems better